<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories" />

    <Button
        android:id="@+id/timesheets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timesheets" />

    <Button
        android:id="@+id/goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Goals" />

    <Button
        android:id="@+id/reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reports" />


    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>